// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search snapshot, diferent snap test 1`] = `
<div
  className="active"
  id="search"
>
  <li
    className="navItem"
  >
    <i
      className="icon-cancel"
    />
    Close
  </li>
  <input
    id="searchInput"
    placeholder="Search..."
    type="text"
  />
</div>
`;

exports[`Search snapshot, diferent snap test 2`] = `
<div
  className="active"
  id="search"
>
  <li
    className="navItem"
  >
    <i
      className="icon-cancel"
    />
    Close
  </li>
  <input
    id="searchInput"
    placeholder="Search..."
    type="text"
  />
</div>
`;

exports[`Search snapshot, diferent snap test 3`] = `
<div
  className="active"
  id="search"
>
  <NavItem
    icon="icon-cancel"
  >
    Close
  </NavItem>
  <input
    id="searchInput"
    placeholder="Search..."
    type="text"
  />
</div>
`;

exports[`Search snapshot, diferent snap test 4`] = `
<div
  class="active"
  id="search"
>
  <li
    class="navItem"
  >
    <i
      class="icon-cancel"
    />
    Close
  </li>
  <input
    id="searchInput"
    placeholder="Search..."
    type="text"
  />
</div>
`;
